--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>Express Babel React</title>
+    <title>Express Babel Webpack React!</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <div id="app"></div>
